PROJECTS/aws-recon/raw-data/security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-d19162b5",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-d19162b5",
            "OwnerId": "144105412483",
            "GroupName": "SSH-Only",
            "Description": "SSH Only from Brandpoints IP",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-5f91623b",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-5f91623b",
            "OwnerId": "144105412483",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 1433,
                    "ToPort": 1433,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "172.30.0.153/32"
                        },
                        {
                            "CidrIp": "172.30.0.251/32"
                        },
                        {
                            "CidrIp": "172.30.0.91/32"
                        },
                        {
                            "Description": "metabase",
                            "CidrIp": "23.20.101.74/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.230.73/32"
                        },
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-f9dc5f9e",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-f9dc5f9e",
            "OwnerId": "144105412483",
            "GroupName": "Brandpoint",
            "Description": "launch-wizard-2 created 2015-08-06T08:41:45.746-05:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 1433,
                    "ToPort": 1433,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 21,
                    "ToPort": 21,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0b4891b4532bfa7d2",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-0b4891b4532bfa7d2",
            "OwnerId": "144105412483",
            "GroupName": "rds-launch-wizard-1",
            "Description": "Created from the RDS Management Console: 2020/05/06 18:07:32",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 1433,
                    "ToPort": 1433,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-066569d6ef26d4b67",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-066569d6ef26d4b67",
            "OwnerId": "144105412483",
            "GroupName": "launch-wizard-2",
            "Description": "launch-wizard-2 created 2020-01-02T22:04:44.616-06:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-2329245f",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-2329245f",
            "OwnerId": "144105412483",
            "GroupName": "WindowsWebServer",
            "Description": "WindowsWebServer",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.23.73/32"
                        },
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 21,
                    "ToPort": 21,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 50000,
                    "ToPort": 51000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0edd301aba452e8f3",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-0edd301aba452e8f3",
            "OwnerId": "144105412483",
            "GroupName": "Engagement Tracker",
            "Description": "CubeJS Engagement Tracker",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "Description": "",
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0dec82611aa141215",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-0dec82611aa141215",
            "OwnerId": "144105412483",
            "GroupName": "rds-launch-wizard",
            "Description": "Created from the RDS Management Console: 2020/05/06 17:35:24",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 1433,
                    "ToPort": 1433,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-07da609aa77b467c9",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-07da609aa77b467c9",
            "OwnerId": "144105412483",
            "GroupName": "MetaBase Security",
            "Description": "launch-wizard-2 created 2018-08-10T10:38:16.825-05:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3000,
                    "ToPort": 3000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Metabase",
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0d81149eceacdca51",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-0d81149eceacdca51",
            "OwnerId": "144105412483",
            "GroupName": "SnowplowEmrEtlSecurityGroup",
            "Description": "launch-wizard-2 created 2019-09-19T09:37:32.674-05:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 4000,
                    "ToPort": 4000,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Cube.js",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "Description": "Cube.js",
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-d28295af",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-d28295af",
            "OwnerId": "144105412483",
            "GroupName": "Brandpoint-Wordpress",
            "Description": "Security Group for Wordpress Instances",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-04e036eec890d2b9a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-04e036eec890d2b9a",
            "OwnerId": "144105412483",
            "GroupName": "Brandpoint-WindowsWebServer",
            "Description": "Brandpoint-WindowsWebServer",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 0,
                    "ToPort": 65535,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "23.21.230.73/32"
                        },
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-01e2e6dbde36652f4",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-01e2e6dbde36652f4",
            "OwnerId": "144105412483",
            "GroupName": "VpnServerSecurityGroup",
            "Description": "launch-wizard-2 created 2018-08-27T14:30:14.464-05:00",
            "IpPermissions": [
                {
                    "IpProtocol": "udp",
                    "FromPort": 1194,
                    "ToPort": 1194,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 22,
                    "ToPort": 22,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [
                        {
                            "CidrIpv6": "::/0"
                        }
                    ],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-86d724e2",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-86d724e2",
            "OwnerId": "144105412483",
            "GroupName": "launch-wizard-1",
            "Description": "launch-wizard-1 created 2014-12-15T16:01:36.433-06:00",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-049c8246cc3a5a628",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-d26af3b7",
            "SecurityGroupArn": "arn:aws:ec2:us-east-1:144105412483:security-group/sg-049c8246cc3a5a628",
            "OwnerId": "144105412483",
            "GroupName": "VisualSvnServerSecurityGroup",
            "Description": "Security group for Visual SVN Code Server",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3389,
                    "ToPort": 3389,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "CidrIp": "23.21.230.73/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "VPN Group",
                            "CidrIp": "23.21.230.73/32"
                        },
                        {
                            "Description": "ARA Office",
                            "CidrIp": "50.253.86.25/32"
                        },
                        {
                            "Description": "EGI Office",
                            "CidrIp": "173.165.255.177/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
